--- a/en/index.html
+++ b/en/index.html
@@ -67,22 +67,22 @@
 </head>
 <body>
     <div class="container">
-        <h1>WIP Software Page</h1>
-        <p>This page is under construction. Stay tuned for updates!</p>
+        <h1>REDASOFTWARE</h1>
+        <p>Software for writing professionals</p>
 
         <!-- Four-column section -->
         <div class="columns">
             <div class="column">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p>Context-based word replacements.</p>
             </div>
             <div class="column">
-                <p>Vivamus lacinia odio vitae vestibulum vestibulum.</p>
+                <p>Automations related to writing jobs.</p>
             </div>
             <div class="column">
-                <p>Curabitur venenatis, nisl in bibendum volutpat.</p>
+                <p>Optimizations for specific workflows.</p>
             </div>
             <div class="column">
-                <p>Sapien velit pharetra ligula, ac maximus sapien.</p>
+                <p>Constant development and new tools.</p>
             </div>
         </div>
     </div>
