--- a/br/index.html
+++ b/br/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>WIP Software Page</title>
+    <title>REDASOFTWARE</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -67,22 +67,22 @@
 </head>
 <body>
     <div class="container">
-        <h1>Área de Testes (Português)</h1>
-        <p>This page is under construction. Stay tuned for updates!</p>
+        <h1>REDASOFTWARE</h1>
+        <p>Software para profissionais de redação</p>
 
         <!-- Four-column section -->
         <div class="columns">
             <div class="column">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p>Substituições de palavras baseadas em contexto.</p>
             </div>
             <div class="column">
-                <p>Vivamus lacinia odio vitae vestibulum vestibulum.</p>
+                <p>Automações relacionadas ao trabalho de redação.</p>
             </div>
             <div class="column">
-                <p>Curabitur venenatis, nisl in bibendum volutpat.</p>
+                <p>Otimizações para fluxos de trabalho específicos.</p>
             </div>
             <div class="column">
-                <p>Sapien velit pharetra ligula, ac maximus sapien.</p>
+                <p>Desenvolvimento constante e novas ferramentas.</p>
             </div>
         </div>
     </div>
