--- a/br/index.html
+++ b/br/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>REDASOFTWARE</title>
+    <title>Redasoft</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -67,22 +67,24 @@
 </head>
 <body>
     <div class="container">
-        <h1>REDASOFTWARE</h1>
+        <h1>Redasoft</h1>
         <p>Software para profissionais de redação</p>
 
         <!-- Four-column section -->
         <div class="columns">
             <div class="column">
-                <p>Substituições de palavras baseadas em contexto.</p>
+                <img src="./assets/extensor.png" alt="Ícone do Extensor">
+                <p>Extensor</p>
+                <p>Transforme números em em palavras por extenso.</p>
             </div>
             <div class="column">
-                <p>Automações relacionadas ao trabalho de redação.</p>
+                <p>Novas soluções em breve.</p>
             </div>
             <div class="column">
-                <p>Otimizações para fluxos de trabalho específicos.</p>
+                <p>Novas soluções em breve.</p>
             </div>
             <div class="column">
-                <p>Desenvolvimento constante e novas ferramentas.</p>
+                <p>Novas soluções em breve.</p>
             </div>
         </div>
     </div>
