--- a/br/index.html
+++ b/br/index.html
@@ -73,7 +73,7 @@
         <!-- Four-column section -->
         <div class="columns">
             <div class="column">
-                <img src="./assets/extensor.png" alt="Ícone do Extensor">
+                <img src="../assets/extensor.png" alt="Ícone do Extensor">
                 <p>Extensor</p>
                 <p>Transforme números em em palavras por extenso.</p>
             </div>
