--- a/br/index.html
+++ b/br/index.html
@@ -75,7 +75,7 @@
             <div class="column">
                 <img src="../assets/extensor.png" alt="Ícone do Extensor">
                 <p><strong>Extensor</strong></p>
-                <p>Transforme números em em palavras por extenso.</p>
+                <p>Transforme números em palavras por extenso.</p>
             </div>
             <div class="column">
                 <p>Novas soluções em breve.</p>
