--- a/br/index.html
+++ b/br/index.html
@@ -68,7 +68,7 @@
 <body>
     <div class="container">
         <h1>Redasoft</h1>
-        <p>Software de produtividade para escriva</p>
+        <p>Software de produtividade para escrita</p>
 
         <!-- Four-column section -->
         <div class="columns">
