--- a/br/index.html
+++ b/br/index.html
@@ -74,7 +74,7 @@
         <div class="columns">
             <div class="column">
                 <img src="../assets/extensor.png" alt="Ícone do Extensor">
-                <p><strong>Extensor</strong></p>
+                <p><strong><a href="extensor.html">Extensor</a></strong></p>
                 <p>Transforme números em palavras por extenso.</p>
             </div>
             <div class="column">
