--- a/br/extensor.html
+++ b/br/extensor.html
@@ -35,6 +35,8 @@
         <h1>Usando o Extensor</h1>
         <p>Esta é a página de ajuda do <strong>Extensor</strong>! Este utilitário foi desenvolvido para facilitar a conversão de números e valores monetários para a forma por extenso.</p>
         
+        <img scr="extensor.gif">
+        
         <h2>Como utilizar</h2>
         <ul>
             <li>
