--- a/br/extensor.html
+++ b/br/extensor.html
@@ -35,7 +35,7 @@
         <h1>Usando o Extensor</h1>
         <p>Esta é a página de ajuda do <strong>Extensor</strong>! Este utilitário foi desenvolvido para facilitar a conversão de números e valores monetários para a forma por extenso.</p>
         
-        <img scr="../assets/extensor.gif">
+        <img src="../assets/extensor.gif">
         
         <h2>Como utilizar</h2>
         <ul>
