--- a/br/extensor.html
+++ b/br/extensor.html
@@ -76,7 +76,7 @@
             Este software é exclusivo para os sistemas operacionais <strong>Windows 10</strong> e <strong>Windows 11</strong>.
         </p>
         
-        <h2>Dicas e Solução de Problemas</h2>
+        <h2>Dicas e solução de problemas</h2>
         <ul>
             <li>
                 Certifique-se de que o Extensor esteja em execução para que o atalho <strong>Ctrl + Caps Lock</strong> funcione corretamente.
