--- a/br/extensor.html
+++ b/br/extensor.html
@@ -45,7 +45,7 @@
         <!-- GIF de demonstração -->
         <img src="../assets/extensor.gif" alt="Demonstração do Extensor" class="demo-gif">
         
-        <h2>Como Utilizar</h2>
+        <h2>Como utilizar</h2>
         <ul>
             <li>
                 Selecione o número que deseja converter.
@@ -58,7 +58,7 @@
             </li>
         </ul>
         
-        <h2>Execução e Acesso</h2>
+        <h2>Execução e acesso</h2>
         <p>
             O Extensor roda a partir da <strong>bandeja do sistema</strong> (área de notificação) do Windows. Para acessar as opções:
         </p>
